unpackaged/objects/demo__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>gggrr__c</fullName>
        <label>num</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>money__c</fullName>
        <label>money</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>per__c</fullName>
        <label>per</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ttt__c</fullName>
        <label>ttt</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>demo</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{00000}</displayFormat>
        <label>demo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>demo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>